--- a/css/tienda.css
+++ b/css/tienda.css
@@ -13,15 +13,15 @@ body {
 /* menu */
 
 nav {
-    display: inline-flex;
-    background-color: #455947;
-    width: 100%;
-    z-index: 1;
-    padding-top: 9%;
-    padding-bottom: 1%;
-    margin-top: -8%;
-    align-items: center;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    background-color: #455947;
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 nav h2 {
@@ -42,7 +42,19 @@ nav a:hover {
     background-color: #864622;
     padding: 15px;
     border-radius: 8px;
-    text-decoration: none;
+}
+
+nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav li {
+    list-style: none;
+    display: flex;
+    align-items: center;
+
 }
 
 .buscar {
@@ -66,12 +78,15 @@ nav a:hover {
     transition: all 0.8s ease;
 }
 
-
 .buscar:hover input {
     width: 170px;
 }
 
 /* carrito */
+
+div.container{
+    padding-top: 8%;
+}
 
 .card-img-top {
     display: block;
@@ -106,6 +121,11 @@ nav a:hover {
     margin-bottom: 10px;
 }
 
+button#comprar-carrito.btn {
+    background-color: #d2aa54;
+    color: #202420;
+}
+
 /* compra*/
 
 .table {
@@ -114,11 +134,10 @@ nav a:hover {
     width: 500px;
     background-color: #c78853;
     color: white;
-    z-index: 2;
     border-radius: 15px;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto; 
+    margin: 0 auto;
 }
 
 .table th,
@@ -184,12 +203,17 @@ footer {
 
 .red img {
     width: 45%;
+    transition: .4s;
+}
+
+.red img:hover {
+    filter: brightness(120%);
 }
 
 .logof {
-    width: 300px;
+    width: 220px;
     display: flex;
-    margin-left: 42%;
-    margin-top: -21%;
+    margin-left: 45%;
+    margin-top: -14%;
     padding-bottom: 15px;
 }
